...
                    onAddNote()
                },
                containerColor = MaterialTheme.colorScheme.primary
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add"
                )
            }
        }
    ) { contentPadding ->
        Column(
            modifier = Modifier
...
                    onClick = onToggleOrderSection
                ) {
                    Icon(
                        modifier = Modifier
                            .testTag(TestTags.SORT),
                        imageVector = Icons.AutoMirrored.Filled.Sort,
                        contentDescription = "Sort"
                    )
                }
            }
//            AnimatedVisibility(
//                visible = uiState.orderSectionVisible,
//                enter = fadeIn() + slideInVertically(),
...
